# chkimg

./: .gitignore  Cargo.toml  README.md
src/: main.rs  symbol_cache.rs
