[package]
name = "chkimg"
version = "0.1.0"
authors = ["Cameron McCormack <cam@mcc.id.au>"]
license = "MPL-2.0"
repository = "https://github.com/heycam/chkimg"
description = "Check a minidump file against binaries from a symbol server for memory corruption"

[dependencies]
cab = "0.1.0"
clap = "2.32.0"
minidump = "0.1.0"
pe = "0.1.1"
reqwest = "0.9"
